--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,14 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://so1.join.com/jobs/461344-senior-data-scientist-m-f-x'>Job @ SO1 (Berlin): (Senior) Data Scientist (m/f/x) | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
+<p><span class="badge badge-light">Vienna Vienna</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://anthem.referrals.selectminds.com/jobs/data-science-sol-consultant-44791'>Data Science Sol Consultant - Anthem, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -131,6 +139,21 @@
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist_R0071613'>Data Scientist</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Data Scientist. The Challenge: Do you want to be a Data Scientist? Are you 
+innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
+<hr/>
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Data Scientist, Senior. The Challenge: Do you want to be a Data Scientist? -Are 
+you innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
+<hr/>
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
+as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -151,7 +174,7 @@
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.prosperity.ie/jobs/show/930678144-head-of-data-science'>Head of Data Science Job</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prosperity.ie/jobs/show/930678144-head-of-data-science'>Head of Data Science Job</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -163,7 +186,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -179,7 +202,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://geico.referrals.selectminds.com/jobs/senior-data-scientist-10781'>Senior Data Scientist - GEICO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geico.referrals.selectminds.com/jobs/senior-data-scientist-10781'>Senior Data Scientist - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -231,7 +254,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/a9f451590314-director-of-data-science'>Director of Data Science at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/a9f451590314-director-of-data-science'>Director of Data Science at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -275,7 +298,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -319,11 +342,11 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluevine/8f9b61ab-4468-4bd6-93cd-1e9a3acf8622'>BlueVine - Data Science QA Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/bluevine/8f9b61ab-4468-4bd6-93cd-1e9a3acf8622'>BlueVine - Data Science QA Developer</a></h5> 
 <p><span class="badge badge-light">Tel-Aviv</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pond5/cd4021f6-a821-4aa1-9091-ad6b631fa958'>Pond5 - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/pond5/cd4021f6-a821-4aa1-9091-ad6b631fa958'>Pond5 - Data Scientist</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -438,7 +461,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
+<h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Conducts data investigation, including data wrangling, cleaning, sampling, 
 management, exploratory analysis, regression and classification, prediction, and 
@@ -455,7 +478,7 @@ fact, you will be expected to contribute right away as a member of our Scrum?...
 genome sequencing is a reality, high-resolution imaging is becoming routine, 
 and?...</p>
 <hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/UcuLupdSu1/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fractalanalytics.applytojob.com/apply/UcuLupdSu1/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in New York, NY.</p>
 <hr/>
@@ -465,28 +488,6 @@ and?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157983-data-science-marketing-science'>Omio Data Science - Marketing Science | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://oviva.recruitee.com/o/data-scientist'>
-      Data Scientist - Oviva
-    </a></h5> 
-<p><span class="badge badge-light">Berlin</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://entrepreneursorganization.applytojob.com/apply/TLgOtsyqxO/Manager-Data-Science-Process-Improvement'>Manager, Data Science & Process Improvement - Entrepreneurs' Organization - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
